<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/parent"
        android:visibility="gone"
        tools:visibility="visible">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imageView2"
            android:layout_width="@dimen/network_error_size"
            android:layout_height="@dimen/network_error_size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.16000003"
            app:srcCompat="@drawable/ic_network_error"
            app:tint="@color/color_network_error_text"/>

        <TextView
            android:id="@+id/textVie5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/connection_error"
            android:textColor="@color/color_network_error_text"
            android:textSize="24sp"
            app:layout_constraintTop_toBottomOf="@+id/imageView2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <LinearLayout
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textVie5"
            app:layout_constraintVertical_bias="0.06999999">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/color_network_error_text"
                android:text="@string/connection_check_1" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:gravity="center"
                android:textColor="@color/color_network_error_text"
                android:text="@string/connection_check_2" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/reload"
                android:layout_width="@dimen/network_error_button_width"
                android:layout_height="@dimen/network_error_button_height"
                android:text="@string/reload"
                app:cornerRadius="100dp"
                app:backgroundTint="@color/color_network_retry"
                android:textColor="@color/color_on_primary" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>