<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_background">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/materialToolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/color_primary"
        app:navigationIcon="@drawable/ic_back"
        tools:title="Chihuahua Images"
        app:titleTextColor="@color/color_on_primary"
        app:titleTextAppearance="@style/CustomToolbarStyle" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/materialToolbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/content_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/view_pager"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <!-- Icon holder flow -->
            <LinearLayout
                android:id="@+id/icons_holder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|end"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.8">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/detail_wallpaper_icon_group_margin"
                    android:gravity="center"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/download"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/detail_wallpaper_icon_text_margin"
                        android:background="@drawable/detail_icon_pad"
                        android:padding="@dimen/detail_wallpaper_icon_inner_padding">

                        <androidx.appcompat.widget.AppCompatImageView
                            android:layout_width="@dimen/detail_wallpaper_icon_size"
                            android:layout_height="@dimen/detail_wallpaper_icon_size"
                            app:srcCompat="@drawable/ic_download"
                            app:tint="@color/color_detail_icon" />
                    </LinearLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/download"
                        android:textColor="@color/color_detail_icon" />
                </LinearLayout>


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/detail_wallpaper_icon_group_margin"
                    android:gravity="center"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/share"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/detail_wallpaper_icon_text_margin"
                        android:background="@drawable/detail_icon_pad"
                        android:padding="@dimen/detail_wallpaper_icon_inner_padding">

                        <androidx.appcompat.widget.AppCompatImageView
                            android:layout_width="@dimen/detail_wallpaper_icon_size"
                            android:layout_height="@dimen/detail_wallpaper_icon_size"
                            app:srcCompat="@drawable/ic_share"
                            app:tint="@color/color_detail_icon" />
                    </LinearLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/share"
                        android:textColor="@color/color_detail_icon" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/detail_wallpaper_icon_group_margin"
                    android:gravity="center"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/wallpaper"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/detail_wallpaper_icon_text_margin"
                        android:background="@drawable/detail_icon_pad"
                        android:padding="@dimen/detail_wallpaper_icon_inner_padding">

                        <androidx.appcompat.widget.AppCompatImageView
                            android:layout_width="@dimen/detail_wallpaper_icon_size"
                            android:layout_height="@dimen/detail_wallpaper_icon_size"
                            app:srcCompat="@drawable/ic_set_wallpaper"
                            app:tint="@color/color_detail_icon" />
                    </LinearLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/set_as"
                        android:textColor="@color/color_detail_icon" />
                </LinearLayout>
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <ProgressBar
            android:id="@+id/circular_progress"
            android:layout_width="@dimen/progress_size"
            android:layout_height="@dimen/progress_size"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.060000002"
            tools:visibility="visible" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>